# nidavellir

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .ignore  404.html  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE.txt  README.md  bob.py  compile_commands.json  docs_readme.html  index.html  mkdocs.yml  testbed.cpp  vcpkg.json
.github/workflows/: build-linux.yml  build-windows.yml  build.yml  ci.yml
benches/: CMakeLists.txt  world_bench.cpp
benches/results/: baseline.json  benches.json
benches/results/old_baselines/: 2024_11_25-05_59_02_PM_baseline.json
cmake/presets/: base.json  x64-linux-clang-sanitize.json  x64-linux-clang.json  x64-linux-gcc-sanitize.json  x64-linux-gcc.json  x64-linux-gcc14.json  x64-windows-clang.json  x64-windows-msvc.json
docs/: docs_readme.md  index.md
docs/html/: _2home_2data_2nidavellir_2src_2world_8h-example.html  annotated.html  annotated_dup.js  classes.html  classnid_1_1Archetype-members.html  classnid_1_1Archetype.js  classnid_1_1RowIterator.html  classnid_1_1World-members.html  classnid_1_1World.html  classnid_1_1World.js  conceptnid_1_1Component.html  concepts.js  core_8h_source.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  examples.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  index.html  menudata.js  navtreedata.js  navtreeindex0.js  nidavellir_8h_source.html  struct_comp_type_info.html  structnid_1_1CompTypeInfo.js  structnid_1_1TypeHash-members.html  test_8h_source.html  world_8h_source.html
docs/latex/: _2home_2data_2nidavellir_2src_2world_8h-example.tex  annotated.tex  classnid_1_1Archetype.tex  classnid_1_1RowIterator.tex  classnid_1_1World.tex  examples.tex  files.tex  index.tex  refman.tex  struct_comp_type_info.tex  structnid_1_1TypeHash.tex  test_8h_source.tex  world_8h_source.tex
html/: _2home_2data_2nidavellir_2src_2world_8h-example.html  annotated.html  annotated_dup.js  archetype_8h_source.html  classes.html  classnid_1_1Archetype-members.html  classnid_1_1Archetype.html  classnid_1_1Archetype.js  classnid_1_1RowIterator-members.html  classnid_1_1RowIterator.js  classnid_1_1World-members.html  classnid_1_1World.html  classnid_1_1World.js  classnid_1_1World_1_1Query-members.html  classnid_1_1World_1_1Query.html  comp__type__info_8h_source.html  concepts.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen_crawl.html  examples.js  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  identifiers_8h_source.html  menudata.js  navtreedata.js  navtreeindex0.js  query_8h_source.html  struct_comp_type_info-members.html  struct_comp_type_info.html  struct_comp_type_info.js  structnid_1_1CompTypeInfo-members.html  structnid_1_1CompTypeInfo.html  structnid_1_1TypeHash.html  structnid_1_1TypeHash.js  world_8h_source.html
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_2.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  (+22 more)
latex/: annotated.tex  archetype_8h_source.tex  classnid_1_1Archetype.tex  classnid_1_1World.tex  classnid_1_1World_1_1Query.tex  comp__type__info_8h_source.tex  conceptnid_1_1Component.tex  concepts.tex  core_8h_source.tex  files.tex  identifiers_8h_source.tex  index.tex  nidavellir_8h_source.tex  query_8h_source.tex  refman.tex  struct_comp_type_info.tex  structnid_1_1CompTypeInfo.tex  test_8h_source.tex  world_8h_source.tex
search/: search_index.js  search_index.json
src/: CMakeLists.txt  archetype.cpp  archetype.h  comp_type_info.h  core.cpp  core.h  identifiers.h  main.cpp  nidavellir.h  test.h  world.cpp  world.h
tests/: CMakeLists.txt  archetype_tests.cpp  tests.cpp  world_tests.cpp
(+38 files in other folders)
